# hey_alfred

./: .dockerignore  .gitignore  README.md  environment.yml  langgraph.json  pyproject.toml
lang-memgpt-main/: Dockerfile  api.py  eslint.config.mjs  pyproject.toml
lang-memgpt-main/lang_memgpt/: _schemas.py  _utils.py  graph.py  ui.py
lang-memgpt-main/lang_memgpt/tools/: __init__.py  calculator_tool.py  date_time_tool.py  newsdata_tool.py  rag_tool.py  taf_tools.py  unit_converter_tool.py
lang-memgpt-main/new-alfred-ui/: package.json
lang-memgpt-main/new-alfred-ui/public/: index.html
lang-memgpt-main/new-alfred-ui/src/: App.css  App.js
lang-memgpt-main/new-alfred-ui/src/components/: ChatInterface.js  FileUpload.js  LoadingMessage.js  MessageBubble.js
lang-memgpt-main/new-alfred-ui/src/hooks/: useChat.js  useSpeechRecognition.js
lang-memgpt-main/new-alfred-ui/src/services/: api.js
lang_memgpt/: __init__.py  _schemas.py  _settings.py
lang_memgpt/RAG_Structure/: __init__.py  decision_logic.py  grade_generation.py  route_question.py
lang_memgpt/RAG_Structure/chains/: answer_grader.py  hallucination_grader.py  retrieval_grader.py
lang_memgpt/RAG_Structure/chains/tests/: test_chains.py
lang_memgpt/RAG_Structure/nodes/: generate.py  grade_documents.py  ingestion.py  retrieve.py  web_search.py
lang_memgpt/tools/: __init__.py  metar_tool.py
new-alfred-ui/: .env  package-lock.json
new-alfred-ui/src/: App.css  App.js
new-alfred-ui/src/components/: ChatInterface.js  FileUpload.js  MessageBubble.js
static/: asset-manifest.json  index.html
static/css/: main.01ba5688.css  main.01ba5688.css.map
static/js/: 453.8763dfc0.chunk.js.map  main.144fd5b2.js  main.144fd5b2.js.map
static/static/js/: 453.8763dfc0.chunk.js
